--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "@adonisjs/session": "^1.0.27",
     "@adonisjs/shield": "^1.0.8",
     "@adonisjs/validator": "^5.0.6",
+    "mysql": "^2.17.1",
     "sqlite3": "^4.0.6",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
+    "@fortawesome/fontawesome-free": "^5.7.2",
     "assets-webpack-plugin": "^3.9.7",
     "babel-loader": "^8.0.5",
     "bootstrap": "^4.2.1",
@@ -43,12 +45,24 @@
     "file-loader": "^3.0.1",
     "jquery": "^3.3.1",
     "mini-css-extract-plugin": "^0.5.0",
+    "nicescroll": "^3.7.4",
     "node-sass": "^4.11.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "owl.carousel": "^2.3.4",
+    "perfect-scrollbar": "^1.4.0",
     "popper.js": "^1.14.7",
     "postcss-loader": "^3.0.0",
+    "prismjs": "^1.15.0",
     "sass-loader": "^7.1.0",
+    "select2": "^4.0.6-rc.1",
+    "selectric": "^1.13.0",
+    "simpleweather": "^3.1.0",
+    "sticky-kit": "^1.1.3",
     "style-loader": "^0.23.1",
-    "uglifyjs-webpack-plugin": "^2.1.1",
+    "summernote": "^0.8.11",
+    "sweetalert": "^2.1.2",
+    "terser-webpack-plugin": "^1.2.3",
+    "uglifyjs-webpack-plugin": "^2.1.2",
     "url-loader": "^1.1.2",
     "webpack": "^4.29.1",
     "webpack-cli": "^3.2.3"
